dataset1235/2025-2/805158916/users/4259475193/executions/3435325918_359761547.log
== RUN (2025-09-03 15:21:08)
-- CODE: 
idade = int(iput())
if idade <= 2:
  print("paga")
else:
  print("nao_paga")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int(iput())
                ^^^^
NameError: name 'iput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int(iput())
                ^^^^
NameError: name 'iput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int(iput())
                ^^^^
NameError: name 'iput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int(iput())
                ^^^^
NameError: name 'iput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int(iput())
                ^^^^
NameError: name 'iput' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int(iput())
                ^^^^
NameError: name 'iput' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:22:31)
-- CODE: 
idade = int(input())
if idade >= 2:
  print("paga")
else:
  print("nao_paga")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
paga
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
nao_paga
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
nao_paga
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
paga
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
paga
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
paga
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 15:20:48)
-- CODE: 
idade = int(iput())
if (idade <= 2):
  print("paga")
else:
  print("nao_paga")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int(iput())
                ^^^^
NameError: name 'iput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int(iput())
                ^^^^
NameError: name 'iput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int(iput())
                ^^^^
NameError: name 'iput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int(iput())
                ^^^^
NameError: name 'iput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int(iput())
                ^^^^
NameError: name 'iput' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int(iput())
                ^^^^
NameError: name 'iput' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 15:21:06)
-- CODE: 
idade = int(iput())
if idade <= 2:
  print("paga")
else:
  print("nao_paga")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int(iput())
                ^^^^
NameError: name 'iput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int(iput())
                ^^^^
NameError: name 'iput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int(iput())
                ^^^^
NameError: name 'iput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int(iput())
                ^^^^
NameError: name 'iput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int(iput())
                ^^^^
NameError: name 'iput' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int(iput())
                ^^^^
NameError: name 'iput' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 15:21:51)
-- CODE: 
idade = int(input())
if idade <= 2:
  print("paga")
else:
  print("nao_paga")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
nao_paga
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
paga
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
paga
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
nao_paga
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
nao_paga
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
paga
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
